tests/invalid/iter_non_class/main.py
if __name__ == '__main__':
    it = iter(123)
